--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,15 +9,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: docker.io/vshn/steward:${{ github.ref }}
     steps:
     - uses: actions/checkout@v1
+    - name: Extract branch name
+      id: extract_branch
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
     - name: Build Image
       run: make docker
+      env:
+        IMAGE_NAME: docker.io/vshn/steward:${{ steps.extract_branch.outputs.branch }}
     - name: Push Image
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: ${IMAGE_NAME}
+        name: docker.io/vshn/steward:${{ steps.extract_branch.outputs.branch }}
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
