--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,19 +9,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      IMAGE: docker.io/vshn/steward
     steps:
     - uses: actions/checkout@v1
-    - name: Extract branch name
-      id: extract_branch
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+    - name: Set version latest
+      if: github.ref==refs/heads/master
+      run: echo ::set-env name=VERSION::latest
+    - name: Set version from tag
+      if: github.ref==refs/tags/v*
+      run: echo ::set-env name=VERSION::$(echo ${GITHUB_REF#refs/tags/})
     - name: Build Image
       run: make docker
       env:
-        IMAGE_NAME: docker.io/vshn/steward:${{ steps.extract_branch.outputs.branch }}
+        IMAGE_NAME: "${IMAGE}:${VERSION}"
     - name: Push Image
       uses: elgohr/Publish-Docker-Github-Action@master
       with:
-        name: docker.io/vshn/steward:${{ steps.extract_branch.outputs.branch }}
+        name: "${IMAGE}:${VERSION}"
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
