--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,5 @@
 site:
-  title: "DRAFT: Steward Documentation"
+  title: "PREVIEW Steward Documentation"
   url: http://localhost/
   start_page: steward::index.adoc
 content:
@@ -10,7 +10,7 @@ content:
     edit_url: 'https://github.com/projectsyn/steward/edit/master/{path}'
 ui:
   bundle:
-    url: https://github.com/vshn/antora-ui-default/releases/download/1.5/ui-bundle.zip
+    url: https://github.com/projectsyn/antora-ui-default/releases/download/1.0/ui-bundle.zip
     snapshot: false
 asciidoc:
   attributes:
