--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      IMAGE: docker.io/vshn/steward
+      IMAGE: docker.io/${{ github.repository }}
     steps:
     - uses: actions/checkout@v1
     - name: Set version latest
