Skip K8s sigs packages
Signed-off-by: Simon Rüegg <simon.ruegg@vshn.ch>

--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
   ],
   "packageRules": [
     {
-      "packagePatterns": ["^k8s.io"],
+      "packagePatterns": ["^k8s.io", "^sigs.k8s.io"],
       "enabled": false
     }
   ]
