--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,17 @@ on:
     - master
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Build image
       run: make docker
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Check Docs
+      run: make check
+    - name: Compile Docs
+      run: make docs
