--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
+    - name: Generate
+      run: make generate
+    - name: No diff
+      run: git diff --exit-code
     - name: Build image
       run: make docker
   docs:
