--- a/renovate.json
+++ b/renovate.json
@@ -18,7 +18,7 @@
     {
       "fileMatch": ["^images.go$"],
       "matchStrings": [
-        "^\tDefault.*?Image = \"(?<depName>.*?):(?<currentValue>.*?)\"$"
+        "^\\tDefault.*?Image\\s+= \"(?<depName>.*?):(?<currentValue>.*?)\"$"
       ],
       "datasourceTemplate": "docker"
     }
