--- a/manifests/appproject-crd.yaml
+++ b/manifests/appproject-crd.yaml
@@ -1,4 +1,6 @@
-# https://raw.githubusercontent.com/argoproj/argo-cd/v2.3.4/manifests/crds/appproject-crd.yaml
+# This file is overridden with `go generate`. DO NOT EDIT.
+# Download using go generate ./...
+# url: https://raw.githubusercontent.com/argoproj/argo-cd/v2.3.4/manifests/crds/appproject-crd.yaml
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
