--- a/renovate.json
+++ b/renovate.json
@@ -18,7 +18,7 @@
     {
       "fileMatch": ["^images.go$"],
       "matchStrings": [
-        "^\\tDefault.*?Image\\s+= \"(?<depName>.*?):(?<currentValue>.*?)\"$"
+        "\\tDefault.*?Image\\s+= \"(?<depName>.*?):(?<currentValue>.*?)\"(\n|$)"
       ],
       "datasourceTemplate": "docker"
     }
