--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,22 @@ on:
     - master
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Go generate
+      run: make generate
+    - name: Check for uncommited differences
+      run: git diff --exit-code -- manifests/
+
   tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build image
       run: make docker
+
   docs:
     runs-on: ubuntu-latest
     steps:
