--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,10 +9,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-go@v3
+      with:
+        go-version: '>=1.18.0'
     - name: Go generate
       run: make generate
     - name: Check for uncommited differences
-      run: git diff --exit-code -- manifests/
+      run: git diff --exit-code -- manifests/ || ( echo 'Please run `go generate ./...`' ; exit 3 )
 
   tests:
     runs-on: ubuntu-latest
